--- a/back_python/.env.template
+++ b/back_python/.env.template
@@ -1,11 +1,7 @@
-user=postgres.sinihteohnxscekimrkh
+user=
+host=
+dbname=
+pool_mode=
 
-host=aws-0-us-west-2.pooler.supabase.com
-port=5432
-dbname=postgres
-pool_mode=session
-
-SUPABASE_DB_URL=postgresql://postgres.sinihteohnxscekimrkh:Wp5yc6KYs4zcXPQf@aws-0-us-west-2.pooler.supabase.com:5432/postgres
-
-
-password=Wp5yc6KYs4zcXPQf
+SUPABASE_DB_URL=
+password=
