--- a/back_python/alembic.ini
+++ b/back_python/alembic.ini
@@ -84,9 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql+psycopg2://postgres.sinihteohnxscekimrkh:Wp5yc6KYs4zcXPQf@aws-0-us-west-2.pooler.supabase.com:5432/postgres
-
-
+sqlalchemy.url = postgresql://postgres.kgbfeubayiqgtscjxeen:rywM5jF65XrY0UC5@aws-1-us-east-1.pooler.supabase.com:5432/postgres
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
