--- a/back/.env.template
+++ b/back/.env.template
@@ -1,3 +1,8 @@
-GEMINI_API_KEY=
+GEMINI_API_KEY=-lFfzfY5kXGd_2Qwc7Lvg6d47YH1x4
 WHATSAPP_API_KEY=
 NGROK_KEY=
+URL_PATIENT=
+URL_CARER=
+URL_MEDICINE=
+URL_TREATMENT=
+URL_REMINDER=
